# causal-demo

./: README.md  pyproject.toml
data/processed/: merged_data.csv
data/raw/: Jan_2026_Monthly_Traffic_Statistics.xlsx  ukhsa-chart-download.csv
notebooks/: 0_process_data.ipynb  1_vis.ipynb  2_granger_causality.ipynb
src/causality_examples/: __init__.py
