[project]
name = "causality-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cameron", email = "cameronwood858@googlemail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "causal-learn>=0.1.4.4",
    "dowhy>=0.14",
    "econml>=0.16.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pyprojroot>=0.3.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "yfinance>=1.2.0",
]

[project.scripts]
causality-examples = "causality_examples:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
